Add courtesy key signatures